11/11/14 (fixing expanding overflow design)

--- a/css/props/pos.css
+++ b/css/props/pos.css
@@ -103,10 +103,12 @@
 	cursor:pointer;
 }
 	#overflowLabel{
-		width:100%;
-		height:100%;
+		top:4px;
+		left:4px;
+		bottom:4px;
+		right:4px;
 		text-align:center;
-		top:21px;
+		padding-top:17px;
 	}
 	#overflowContent{
 		top:0;
@@ -115,6 +117,7 @@
 		right:0;
 		background:rgba(100,100,100,0.9);
 		border:1px solid #777777;
+		pointer-events:none;
 	}
 	#overflowY, #overflowX{
 		top:5px;
